--- a/public/adminlte/css/nuevo.css
+++ b/public/adminlte/css/nuevo.css
@@ -5,6 +5,10 @@
 
 .divle {
     float: left !important;
+    margin-left: 20px !important;
+    margin-right: 20px !important;
+    margin-bottom: 20px !important;
+    margin-top: 0px !important;
 }
 
 .pa{
@@ -35,6 +39,26 @@
 .mmiddle {
     margin-top: 15px;
     margin-bottom: 15px;
+}
+
+.alider{
+    float: right;
+}
+
+.aliizq{
+    float: left;
+}
+
+.alinone{
+    float: none;
+}
+
+.colorBlack{
+    color: black !important;
+}
+
+.colorGrey{
+    color: #9C9D9D;
 }
 
 .colorWhite{
@@ -77,8 +101,17 @@
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    border-radius: 5px; /* 5px rounded corners */
     width: 100%;
+}
+
+.cardNotes {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    background-color: #FFF4BE;
+    transition: 0.3s;
+    width: 45%;
+    margin-right: 50px;
+    margin-left: 50px;
 }
 
 .cardlog {
@@ -91,6 +124,14 @@
 
 /* On mouse-over, add a deeper shadow */
 .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.card2:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.cardNotes:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
@@ -112,17 +153,23 @@
 
 .mleft {
     margin-left: 70px;
-    ;
+}
+
+.mlefticon {
+    margin-left: 10px;
+    margin-bottom: 10px;
 }
 
 .mlefttab {
     margin-left: 30px;
-    ;
 }
 
 .mrigth {
-    margin-right: 5px;
-    ;
+    margin-right: 10px;
+}
+
+.mrigth2 {
+    margin-right: 50px;
 }
 
 .mup {
@@ -174,3 +221,113 @@ textarea {
     text-align: right!important;
 }
 
+.tneg{
+    text-decoration: black;
+}
+
+/* Style tab links */
+.tablink {
+    background-color: #555;
+    color: white;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    font-size: 17px;
+    width: 20%;
+}
+
+.tablink:hover {
+    background-color: rgb(119, 119, 119);
+}
+
+  /* Style the tab content (and add height:100% for full page content) */
+.tabcontent {
+    color: white;
+    display: none;
+    padding: 100px 20px;
+    height: 100%;
+}
+
+#Home {background-color: '#ECF0F5';}
+#News {background-color: rgba(255, 255, 255, 0.856);}
+#Contact {background-color: rgba(255, 255, 255, 0.856);}
+#About {background-color: rgba(255, 255, 255, 0.856);}
+#Exp {background-color: rgba(255, 255, 255, 0.856);}
+
+.colnG{
+    color: #ffffff;
+    font-weight: bold;
+    font-size: large;
+}
+
+.colnM{
+    color: #ffffff;
+    font-size: medium;
+}
+
+.cajon1{
+    float:left;
+}
+
+.cajon2{
+float:left;
+}
+
+.btnnw{
+    background: cornflowerblue;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 8px;
+    font-family: 'Lato';
+    margin: 5px;
+    text-transform: uppercase;
+    cursor: pointer;
+    outline: none;
+}
+
+.btnnw:hover {
+    background: orange;
+}
+
+.btnClose{
+    background: rgba(255, 167, 35, 0.726);
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 8px;
+    font-family: 'Lato';
+    margin: 5px;
+    text-transform: uppercase;
+    cursor: pointer;
+    outline: none;
+}
+
+.btnClose:hover {
+    background: rgb(243, 45, 45);
+}
+
+.btnOpen{
+    background: #5F9DE0;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 8px;
+    font-family: 'Lato';
+    margin: 5px;
+    text-transform: uppercase;
+    cursor: pointer;
+    outline: none;
+}
+
+.btnOpen:hover {
+    background: #777777;
+    color: white;
+}
+
+hr {
+    height: 1px;
+    background-color: black;
+}
