--- a/public/adminlte/css/nuevo.css
+++ b/public/adminlte/css/nuevo.css
@@ -3,9 +3,17 @@
     margin-top: auto;
 }
 
+.divle2 {
+    float: none !important;
+    margin-left: 90px !important;
+    margin-right: 20px !important;
+    margin-bottom: 20px !important;
+    margin-top: 0px !important;
+}
+
 .divle {
     float: left !important;
-    margin-left: 20px !important;
+    margin-left: inherit !important;
     margin-right: 20px !important;
     margin-bottom: 20px !important;
     margin-top: 0px !important;
@@ -36,9 +44,22 @@
     margin: 25px;
 }
 
+.padre2 {
+    display: flex;
+}
+
+.hijo2 {
+    padding: 10px;
+    margin: 10px;
+}
+
 .mmiddle {
     margin-top: 15px;
     margin-bottom: 15px;
+}
+
+.aliizqitems{
+    margin-right: 10px;
 }
 
 .alider{
@@ -97,6 +118,16 @@
     width: 30%;
 }
 
+.cardPx {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 35%;
+    max-height: 285px;
+    margin-right: 50px;
+    margin-left: 100px !important;
+}
+
 .card2 {
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -127,6 +158,10 @@
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
+.cardPx:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
 .card2:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
@@ -148,7 +183,6 @@
 
 .mdown {
     margin-bottom: 15px;
-    ;
 }
 
 .mleft {
@@ -164,6 +198,11 @@
     margin-left: 30px;
 }
 
+.mleftpx {
+    margin-left: 30px;
+    margin-bottom: 30px;
+}
+
 .mrigth {
     margin-right: 10px;
 }
@@ -174,6 +213,14 @@
 
 .mup {
     margin-top: 15px;
+}
+
+.mup2 {
+    margin-top: 50px !important;
+}
+
+.mle2{
+    margin-left: 12px !important;
 }
 
 .bordertable {
@@ -327,7 +374,50 @@ float:left;
     color: white;
 }
 
+.btnIndexPx{
+    background: #1877F2;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 8px;
+    font-family: 'Lato';
+    margin: 5px;
+    text-transform: uppercase;
+    cursor: pointer;
+    outline: none;
+}
+
+.btnIndexPx:hover {
+    background: #777777;
+    color: white;
+}
+
+.btnDeletePx{
+    background: #DC3545;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 8px;
+    font-family: 'Lato';
+    margin: 5px;
+    text-transform: uppercase;
+    cursor: pointer;
+    outline: none;
+}
+
+.btnDeletePx:hover {
+    background: #777777;
+    color: white;
+}
+
 hr {
     height: 1px;
     background-color: black;
+}
+
+.imgRedonda {
+    width:300px;
+    height:300px;
+    border-radius:160px;
+    border:3px solid #666;
 }
